<resources>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="app_name">GRIP 2</string>
    <string name="hint_title">Title</string>
    <string name="hint_body">Body</string>
    <string name="action_submit">Submit</string>
    <string name="action_update">Update</string>
    <string name="action_pro_det">Go To Professional Detail</string>
    <string name="action_educational">Go To Education Detail</string>
    <string name="action_show">Show Detail</string>
    <string name="title_enter_post">Enter Post</string>
    <string name="personal">Personal Details</string>
    <string name="professional">Professional Details</string>
    <string name="educational">Educational Details</string>
    <string name="mssg_error_submitting_post">Error submitting post</string>
</resources>
